--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <a href="babel.html">babel</a>
     </p>
     <p>
-      <a href="purecomponent.html"></a>
+      <a href="purecomponent.html">react purecomponent</a>
     </p>
   </body>
 </html>
