--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <p>
+      詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと
+    </p>
+    <p>
       <a href="babel.html">babel</a>
     </p>
     <p>
