--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>
       <a href="purecomponent.html">react purecomponent</a>
     </p>
+    <p>
+      <a href="redux.html">redux only</a>
+    </p>
   </body>
 </html>
