--- a/redux.html
+++ b/redux.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>はじめてのhelloworld(react.js)</title>
+  <title>redux only</title>
 </head>
 <body>
   <div id="app"></div>
