--- a/redux.html
+++ b/redux.html
@@ -9,12 +9,11 @@
 
   <p>コンソールを開いて確認すること</p>
 
-  <script src="lib/babel.min.js"></script>
   <script src="lib/redux.min.js"></script>
-  <script type="text/babel">
-    //import { createStore } from 'redux'
-    var createStore=Redux.createStore
-    var combineReducers=Redux.combineReducers
+  <script type="text/javascript">
+    //import { createStore, combineReducers } from 'redux' //nodeでやるときにはこちら
+    let createStore=Redux.createStore
+    let combineReducers=Redux.combineReducers
 
     /**
     * This is a reducer, a pure function with (state, action) => state signature.
