--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <p> 詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと </p>
     <p> <a href="babel.html">babel</a> </p>
     <p> <a href="purecomponent.html">react purecomponent</a> </p>
+    <p> <a href="non-jsx.html">non jsx react</a> </p>
     <p> <a href="redux.html">redux only</a> </p>
     <p> <a href="saga.html">redux saga</a> </p>
   </body>
