--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p> <a href="non-jsx.html">non jsx react</a> </p>
     <p> <a href="redux.html">redux only</a> </p>
     <p> <a href="saga.html">redux saga</a> </p>
+    <p> <a href="react-redux-render-with-babel.html">react redux</a> </p>
+    <p> <a href="props-override.html">props override</a> </p>
   </body>
 </html>
