--- a/props-override-mistake.html
+++ b/props-override-mistake.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>React/Redux</title>
+  <title>props override</title>
   <script src="lib/react.production.min.js"></script>
   <script src="lib/react-dom.production.min.js"></script>
   <script src="lib/react-redux.min.js"></script>
@@ -61,19 +61,37 @@
     }
     class Tag2 extends RC {
       constructor(props){super(props);}
-      render(){return(<div><h2>Tag2</h2><Tag3 a="1" /></div>)}
+      render(){return(
+        <div>
+          <h2>Tag2</h2>
+          <Tag3Base />
+          <Tag3 />
+        </div>
+      )}
     }
     class Tag3Base extends RC {
-      constructor(props){super(props);}
+      constructor(props){
+        super(props);
+        this.state={c:10};
+      }
+      inc(){
+        this.props.inc ? this.props.inc() : this.setState({c:this.state.c+1})
+      }
+      dec(){
+        this.props.dec ? this.props.dec() : this.setState({c:this.state.c-1})
+      }
+      getC(){
+        return (this.props.c ? this.props.c : this.state.c)
+      }
       render(){
         return(
           <div>
             <h3>Tag3</h3>
-            a={this.props.a},
-            store.counter={this.props.c}
+            {console.log(this.props)}
+            c={this.getC()}
             <br />
-            <button onClick={()=>this.props.dispatch({type:'DEC'})}>-1</button>
-            <button onClick={()=>this.props.dispatch({type:'INC'})}>+1</button>
+            <button onClick={()=>this.dec()}>-1</button>
+            <button onClick={()=>this.inc()}>+1</button>
             <Tag4 />
           </div>
         )
@@ -84,7 +102,13 @@
       render(){return(<div><h4>Tag4</h4></div>)}
     }
     // ReactRedux.connectは React.Componentをラップしたコンポーネントを返す（ここでstate変化時にrenderしている模様）
-    const Tag3=(ReactRedux.connect(s=>{return {c:s.counter}}))(Tag3Base)
+    const Tag3=(ReactRedux.connect(
+          store=>{return {c:store.counter}}, // store->propsへの写像 props.c はオーバライドされる
+          dispatch=>{return { // dispath -> propsへの写像
+            inc: ()=> dispatch({type:'INC'}),
+            dec: ()=> dispatch({type:'DEC'})
+          }}
+    ))(Tag3Base)
 
     const Provider=ReactRedux.Provider;
     const rootElement = document.getElementById("root");
