初期表示できた

--- a/props-override.html
+++ b/props-override.html
@@ -80,7 +80,7 @@
           <div>
             <h3>Tag3</h3>
             {console.log(this.props)}
-            c={this.props.c}
+            {"c=" + this.props.c}
             <br />
             <button onClick={() => this.props.dec()}>-1</button>
             <button onClick={() => this.props.inc()}>+1</button>
