lib production -> develop

--- a/functionComponent.html
+++ b/functionComponent.html
@@ -13,9 +13,9 @@
       いいい
     </div>
   </div>
-  <script src="lib/babel.min.js"></script>
-  <script src="lib/react.production.min.js"></script>
-  <script src="lib/react-dom.production.min.js"></script>
+  <script src="lib/babel.js"></script>
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
   <script src="lib/semantic-ui-react.min.js"></script>
   <script type="text/babel">
     const Button=semanticUIReact.Button
