--- a/react-redux-render.html
+++ b/react-redux-render.html
@@ -7,12 +7,12 @@
 <body>
   <div id="root" />
 
-  <script src="lib/react.production.min.js"></script>
-  <script src="lib/react-dom.production.min.js"></script>
-  <script src="lib/react-redux.min.js"></script>
-  <script src="lib/redux.min.js"></script>
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
+  <script src="lib/react-redux.js"></script>
+  <script src="lib/redux.js"></script>
 
-  <script src="lib/babel.min.js"></script>
+  <script src="lib/babel.js"></script>
 
   <script type="text/javascript">
     // 最小構成 Redux
