--- a/redux.html
+++ b/redux.html
@@ -9,7 +9,7 @@
 
   <p>コンソールを開いて確認すること</p>
 
-  <script src="lib/redux.min.js"></script>
+  <script src="lib/redux.js"></script>
   <script type="text/javascript">
     //import { createStore, combineReducers } from 'redux' //nodeでやるときにはこちら
     let createStore=Redux.createStore
