--- a/saga-cdn.html
+++ b/saga-cdn.html
@@ -9,8 +9,8 @@
 
   <p>コンソールを開いて確認すること</p>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.4/redux.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux-saga/1.0.5/redux-saga.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.4/redux.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/redux-saga/1.0.5/redux-saga.umd.js"></script>
 
   <script type="text/javascript">
     /*  //nodeでやるときにはこちら
