--- a/saga.html
+++ b/saga.html
@@ -9,8 +9,8 @@
 
   <p>コンソールを開いて確認すること</p>
 
-  <script src="lib/redux.min.js"></script>
-  <script src="lib/redux-saga.umd.min.js"></script>
+  <script src="lib/redux.js"></script>
+  <script src="lib/redux-saga.umd.js"></script>
 
   <script type="text/javascript">
     /*  //nodeでやるときにはこちら
