--- a/babel.html
+++ b/babel.html
@@ -7,7 +7,7 @@
 <body>
   <div id="app"></div>
 
-  <script src="./lib/babel.min.js"></script>
+  <script src="./lib/babel.js"></script>
   <script type="text/babel">
     const getMessage = () => "Hello Babel!";
     document.getElementById('app').innerHTML = getMessage();
