--- a/fetch.html
+++ b/fetch.html
@@ -7,9 +7,9 @@
 <body>
   <div id="app"></div>
 
-  <script src="lib/babel.min.js"></script>
-  <script src="lib/react.production.min.js"></script>
-  <script src="lib/react-dom.production.min.js"></script>
+  <script src="lib/babel.js"></script>
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
   <script type="text/babel">
 
     class BC extends React.Component {
