--- a/non-jsx.html
+++ b/non-jsx.html
@@ -7,8 +7,8 @@
 <body>
   <div id="app"></div>
 
-  <script src="lib/react.production.min.js"></script>
-  <script src="lib/react-dom.production.min.js"></script>
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
   <script type="text/javascript">
 
     class BC extends React.Component {
