--- a/react-redux-render-with-babel.html
+++ b/react-redux-render-with-babel.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>React/Redux</title>
-  <script src="lib/react.production.min.js"></script>
-  <script src="lib/react-dom.production.min.js"></script>
-  <script src="lib/react-redux.min.js"></script>
-  <script src="lib/redux.min.js"></script>
-  <script src="lib/babel.min.js"></script>
+  <script src="lib/react.development.js"></script>
+  <script src="lib/react-dom.development.js"></script>
+  <script src="lib/react-redux.js"></script>
+  <script src="lib/redux.js"></script>
+  <script src="lib/babel.js"></script>
 </head>
 <body>
   コンソールを開いて確認すること
