c={this.state} -> c={this.state.c}

--- a/props-override.html
+++ b/props-override.html
@@ -100,7 +100,7 @@
         return (
           <div>
             <h3>Tag3Test</h3>
-            <Tag3Base c={this.state} inc={this.inc} dec={this.dec} />
+            <Tag3Base c={this.state.c} inc={this.inc} dec={this.dec} />
           </div>
         )
       }
