--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   </head>
   <body>
     <p> 詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと </p>
-    <p> <a href="babel.html">babel</a> </p>
-    <p> <a href="purecomponent.html">react purecomponent</a> </p>
-    <p> <a href="non-jsx.html">non jsx react</a> </p>
-    <p> <a href="redux.html">redux only</a> </p>
-    <p> <a href="saga.html">redux saga</a> </p>
-    <p> <a href="react-redux-render-with-babel.html">react redux</a> </p>
-    <p> <a href="props-override.html">props override</a> </p>
+    <p />
+    <p> <a href='babel.html'>babel(standalone)</a> babel.html </p>
+    <p> <a href='fetch.html'>PureComponent(React)</a> fetch.html </p>
+    <p> <a href='functionComponent.html'>PureComponent(React)</a> functionComponent.html </p>
+    <p> <a href='index.html'>最小構成でReactJS</a> index.html </p>
+    <p> <a href='non-jsx.html'>PureComponent(React)</a> non-jsx.html </p>
+    <p> <a href='props-override-mistake.html'>props override</a> props-override-mistake.html </p>
+    <p> <a href='props-override.html'>props override</a> props-override.html </p>
+    <p> <a href='purecomponent.html'>PureComponent(React)</a> purecomponent.html </p>
+    <p> <a href='react-cdn.html'>はじめてのhelloworld(react.js)</a> react-cdn.html </p>
+    <p> <a href='react-redux-render-with-babel.html'>React/Redux</a> react-redux-render-with-babel.html </p>
+    <p> <a href='react-redux-render.html'>PureComponent(React)</a> react-redux-render.html </p>
+    <p> <a href='redux.html'>redux only</a> redux.html </p>
+    <p> <a href='saga-cdn.html'>redux-saga</a> saga-cdn.html </p>
+    <p> <a href='saga.html'>redux-saga</a> saga.html </p>
   </body>
 </html>
