--- a/fetch.html
+++ b/fetch.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>PureComponent(React)</title>
+  <title>生コンポーネントでfetch</title>
 </head>
 <body>
   <div id="app"></div>
@@ -48,7 +48,7 @@
       }
       render(){
         return (
-          <div class='Tag1'>
+          <div>
             <h1>Tag1</h1>
             <div>{this.props.a}</div>
             <Tag2 {...this.props}/>
