--- a/functionComponent.html
+++ b/functionComponent.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>PureComponent(React)</title>
+  <title>FunctionComponent(React)</title>
   <link rel="stylesheet" type="text/css" href="lib/semantic.min.css">
 </head>
 <body>
