--- a/props-override-mistake.html
+++ b/props-override-mistake.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>props override</title>
+  <title>props override(失敗版)</title>
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-redux.js"></script>
