--- a/saga-cdn.html
+++ b/saga-cdn.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>redux-saga</title>
+  <title>redux-saga(cdn版)</title>
 </head>
 <body>
   <div id="app"></div>
