--- a/react-cdn.html
+++ b/react-cdn.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>はじめてのhelloworld(react.js)</title>
+  <title>React(cdn版)</title>
 </head>
 <body>
   <div id="app"></div>
