--- a/react-redux-render.html
+++ b/react-redux-render.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>PureComponent(React)</title>
+  <title>React/Redux(babelなし)</title>
 </head>
 <body>
   <div id="root" />
