prop overrideをコピーして関数コンポーネント版を作成

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <p> <a href='non-jsx.html'>PureComponent(React)</a> non-jsx.html </p>
   <p> <a href='props-override-mistake.html'>props override(失敗版)</a> props-override-mistake.html </p>
   <p> <a href='props-override.html'>props override</a> props-override.html </p>
+  <p> <a href='props-override-with-function-component.html'>props override with function component</a>
+    props-override-with-function-component.html </p>
   <p> <a href='purecomponent.html'>PureComponent(React)</a> purecomponent.html </p>
   <p> <a href='react-cdn.html'>React(cdn版)</a> react-cdn.html </p>
   <p> <a href='react-redux-render-with-babel.html'>React/Redux</a> react-redux-render-with-babel.html </p>
