タイトル修正

--- a/props-override-with-function-component.html
+++ b/props-override-with-function-component.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>props override</title>
+  <title>props override with function component</title>
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-redux.js"></script>
