欲しかったので戻るリンク追加

--- a/props-override-with-function-component.html
+++ b/props-override-with-function-component.html
@@ -13,6 +13,7 @@
 
 <body>
   コンソールを開いて確認すること
+  <p> <a href='./'>戻る</a> </p>
   <div id="root" /> <!-- ここにReactをrender -->
 
   <script type="text/babel">
