--- a/saga.html
+++ b/saga.html
@@ -3,34 +3,28 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>redux-saga（最小版）</title>
+  <title>root saga (like un*x init)</title>
 </head>
 
 <body>
   <div id="app"></div>
 
-  <p>コンソールを開いて確認すること</p>
+  <p>Check console.</p>
 
   <script src="lib/redux.js"></script>
   <script src="lib/redux-saga.umd.js"></script>
 
   <script type="text/javascript">
-    /*  //nodeでやるときにはこちら
-    import { createStore } from 'redux'
-    import { Action, applyMiddleware, combineReducers, createStore } from "redux";
-    import createSagaMiddleware from "redux-saga";
-    import { call, put, takeEvery } from "@redux-saga/core/effects";
-    */
-    let applyMiddleware = Redux.applyMiddleware
-    let createStore = Redux.createStore
-    let combineReducers = Redux.combineReducers
-    let createSagaMiddleware = ReduxSaga.default  //https://github.com/redux-saga/redux-saga/blob/master/README_ja.md
-    let call = ReduxSaga.effects.call
-    let put = ReduxSaga.effects.put
-    let takeEvery = ReduxSaga.effects.takeEvery
+    const applyMiddleware = Redux.applyMiddleware
+    const createStore = Redux.createStore
+    const combineReducers = Redux.combineReducers
+    const createSagaMiddleware = ReduxSaga.default  //https://github.com/redux-saga/redux-saga/blob/master/README_ja.md
+    const call = ReduxSaga.effects.call
+    const put = ReduxSaga.effects.put
+    const takeEvery = ReduxSaga.effects.takeEvery
+    const takeLatest = ReduxSaga.effects.takeLatest
 
-    // timerをPromiseで実装しておく
-    // fetchはデフォルトでPromiseを返すのでこんなことしなくていい
+    // timerをPromiseで実装しておく fetchはデフォルトでPromiseを返すのでこんなことしなくていい
     const wait = (ms) =>
       new Promise((resolve, reject) =>
         setTimeout(resolve, ms)
@@ -46,7 +40,7 @@
         case "DECREMENT":
           console.log(`DECREMENT ${val}`)
           return state - val;
-        default:
+        default: //列挙されていないActionはstateをそのまま返すのに注意
           return state;
       }
     }
@@ -56,7 +50,8 @@
       counter: countReducer
     });
 
-    // saga作成
+    // saga 
+    // rootSagaの記述方法によって起動される順序、個数、回数が異なることに注意
     function* timerCounter(action) {
       const ms = action.time ? action.time : 1000;
       const val = action.value ? action.value : 1;
@@ -64,56 +59,53 @@
       switch (action.type) {
         case "TIME_INCREMENT":
           console.log(`wait ${ms}. INCREMENT ${val}`)
-          // promiseの結果を受け取れることがcallの最大のメリット
-          data = yield call(() => wait(ms).then(_ => action.value));
-          // data=yield call(wait,1000) //こっちでもいい
-          console.log(`TIME_INCREMENT now ! ${val}`);
-          // putはディスパッチャを呼べる
-          yield put({ type: "INCREMENT", value: data })
+          data = yield call(() => wait(ms).then(_ => action.value)); // promiseの結果を受け取れることがcallの最大のメリット
+          console.log(`TIME_INCREMENT now ! ${data}`);
+          yield put({ type: "INCREMENT", value: data }); // putはstoreとの唯一の通信手段
           return;
         case "TIME_DECREMENT":
           console.log(`wait ${ms}. DECREMENT ${val}`)
           data = yield call(() => wait(ms).then(_ => action.value));
-          console.log(`TIME_DECREMENT now ! ${val}`);
+          console.log(`TIME_DECREMENT now ! ${data}`);
           yield put({ type: "DECREMENT", value: data })
           return;
       }
     }
 
-    // イベントループ登録処理
-    // action.typeがhitする場合処理する
-    // takeEveryは該当するイベントをすべて拾う
-    function* mySaga() {
-      yield takeEvery(
-        [
-          "TIME_INCREMENT",
-          "TIME_DECREMENT",
-        ],
-        timerCounter
-      );
+    // saga その２
+    function* echoSaga(action) {
+      console.log({ action: "■ saga fire! ■", ...action });
+    }
+
+    // ルートSaga定義　un*xにおける initに該当する　ここから分岐する
+    // takeEveryは並列で処理を分岐(fork)した後、該当するイベントを引数のsagaに渡し、同名のイベントを待ち続ける
+    // takeLatestは並列で処理を分岐(fork)した後、該当するイベントを引数のsagaに渡し、前回の処理を中断し、同名のイベントを待ち続ける
+    function* rootSaga() {
+      yield takeEvery("TIME_INCREMENT", timerCounter); //同名のsagaに渡す際でもこう書くことで別々のスレッドになる
+      yield takeLatest("TIME_DECREMENT", timerCounter);
+      yield takeEvery(["TIME_INCREMENT", "TIME_DECREMENT"], echoSaga); //何度でもforkできる
     }
 
     // Saga ミドルウェアを作成する
     const sagaMiddleware = createSagaMiddleware();
     const middlewares = applyMiddleware(sagaMiddleware);
 
-    // ストアの作成 sagaもstoreに登録
+    // ストアの作成 第２引数にmiddlewareを登録し、store更新後 saga群へActionがコピーし渡される
     let store = createStore(allReducer, middlewares);
 
     // Saga を起動する
-    // actionがdispatchされるとreducerの前に差し込まれて
-    // saga -> reducer の順で実行される
-    sagaMiddleware.run(mySaga);
+    sagaMiddleware.run(rootSaga);
 
-    // reduxのsatate監視
-    // stateの値が更新されるごとにsubscribeが実行される (reactならrenderを入れる)
-    store.subscribe(() => console.log(store.getState()));
+    // reduxのstate監視 stateの値が更新されるごとにsubscribeが実行される 
+    store.subscribe(() => console.log({ store: "Store's value", ...store.getState() }));
 
     const main = () => {
       store.dispatch({ type: "TIME_INCREMENT", value: 5, time: 2000 });
       store.dispatch({ type: "INCREMENT", value: 1 });
+      // "TIME_DECREMENT" は takeLatestなのでこれはキャンセルされる
       store.dispatch({ type: "TIME_DECREMENT", value: 3, time: 1000 });
       store.dispatch({ type: "INCREMENT", value: 2 });
+      store.dispatch({ type: "TIME_DECREMENT", value: 2, time: 500 });
       store.dispatch({ type: "DECREMENT", value: 1 });
       store.dispatch({ type: "INCREMENT", value: 3 });
     };
