--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <html>
-
-<head>
-  <title>最小構成でReactJS</title>
-</head>
-
-<body>
-  <p> 詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと </p>
-  <p />
-  <p> <a href='babel.html'>babel(standalone)</a> babel.html </p>
-  <p> <a href='dual-domain-store.html'>複数ドメインのstoreとレンダリング範囲確認</a> dual-domain-store.html </p>
-  <p> <a href='fetch.html'>生コンポーネントでfetch</a> fetch.html </p>
-  <p> <a href='functionComponent.html'>FunctionComponent(React)</a> functionComponent.html </p>
-  <p> <a href='non-jsx.html'>PureComponent(React)</a> non-jsx.html </p>
-  <p> <a href='props-override-mistake.html'>props override(失敗版)</a> props-override-mistake.html </p>
-  <p> <a href='props-override.html'>props override</a> props-override.html </p>
-  <p> <a href='props-override-with-function-component.html'>props override with function component</a>
-    props-override-with-function-component.html </p>
-  <p> <a href='purecomponent.html'>PureComponent(React)</a> purecomponent.html </p>
-  <p> <a href='react-cdn.html'>React(cdn版)</a> react-cdn.html </p>
-  <p> <a href='react-redux-render-with-babel.html'>React/Redux</a> react-redux-render-with-babel.html </p>
-  <p> <a href='react-redux-render.html'>React/Redux(babelなし)</a> react-redux-render.html </p>
-  <p> <a href='redux.html'>redux only</a> redux.html </p>
-  <p> <a href='saga-cdn.html'>redux-saga(cdn版)</a> saga-cdn.html </p>
-  <p> <a href='saga.html'>redux-saga（最小版）</a> saga.html </p>
-</body>
-
+  <head>
+    <title>最小構成でReactJS</title>
+  </head>
+  <body>
+    <p> 詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと </p>
+    <p />
+    <p> <a href='babel.html'>babel(standalone)</a> babel.html </p>
+    <p> <a href='dual-domain-store.html'></a> dual-domain-store.html </p>
+    <p> <a href='fetch.html'></a> fetch.html </p>
+    <p> <a href='functionComponent.html'></a> functionComponent.html </p>
+    <p> <a href='non-jsx.html'>PureComponent(React)</a> non-jsx.html </p>
+    <p> <a href='props-override-mistake.html'></a> props-override-mistake.html </p>
+    <p> <a href='props-override-with-function-component.html'></a> props-override-with-function-component.html </p>
+    <p> <a href='props-override.html'></a> props-override.html </p>
+    <p> <a href='purecomponent.html'>PureComponent(React)</a> purecomponent.html </p>
+    <p> <a href='react-cdn.html'></a> react-cdn.html </p>
+    <p> <a href='react-redux-render-with-babel.html'></a> react-redux-render-with-babel.html </p>
+    <p> <a href='react-redux-render.html'></a> react-redux-render.html </p>
+    <p> <a href='redux.html'></a> redux.html </p>
+    <p> <a href='saga-cdn.html'></a> saga-cdn.html </p>
+    <p> <a href='saga.html'></a> saga.html </p>
+  </body>
 </html>
