全部入りつくった

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p> <a href='react-cdn.html'>React(cdn版)</a> react-cdn.html </p>
     <p> <a href='react-redux-render-with-babel.html'>React/Redux</a> react-redux-render-with-babel.html </p>
     <p> <a href='react-redux-render.html'>React/Redux(babelなし)</a> react-redux-render.html </p>
+    <p> <a href='react-redux-saga.html'>react redux saga</a> react-redux-saga.html </p>
     <p> <a href='redux.html'>redux only</a> redux.html </p>
     <p> <a href='saga-cdn.html'>redux-saga(cdn版)</a> saga-cdn.html </p>
     <p> <a href='saga.html'>root saga (like un*x init)</a> saga.html </p>
