--- a/babel.html
+++ b/babel.html
@@ -9,10 +9,19 @@
 <body>
   <div id="app"></div>
 
-  <script src="./lib/babel.js"></script>
-  <script type="text/babel">
+  <script src="lib/babel.js"></script>
+  <script src="lib/polyfill.js"></script>
+
+  <script type="text/babel" data-presets="es2017,react">
     const getMessage = () => "Hello Babel!";
     document.getElementById('app').innerHTML = getMessage();
+
+    function* countUp() {
+      let i = 0;
+      for (;;)
+        yield i++;
+    }
+    let iter=countUp();
   </script>
 </body>
 
