nginxの場合を追加

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>最小構成でReactJS</title>
+    <meta charset="utf-8"/>
   </head>
   <body>
     <p> 詳細は<a href="https://github.com/n9d/minReact">minReact</a>を参照のこと </p>
